stlc-hs/testcases/stlc/ill-Typed/highOrderWrongType.lam
(lam f:Nat -> Nat. f (zero))(lam x : Bool . x) 